Toolbar element wrap instead of overlapping.

--- a/com.unity.visualeffectgraph/Editor Default Resources/uss/VFXView.uss
+++ b/com.unity.visualeffectgraph/Editor Default Resources/uss/VFXView.uss
@@ -12,3 +12,9 @@ VFXView
     margin-top: -2px;
     background-color: rgb(210, 152, 0);
 }
+
+VFXView .unity-toolbar
+{
+    flex-wrap:wrap;
+    height:auto;
+}
