fix drag indicator no longer appearing on VFXBlackboard

--- a/com.unity.visualeffectgraph/Editor Default Resources/uss/VFXBlackboard.uss
+++ b/com.unity.visualeffectgraph/Editor Default Resources/uss/VFXBlackboard.uss
@@ -110,9 +110,17 @@ VFXBlackboardCategory > .mainContainer > #rowsContainer
     overflow:hidden
 }
 
-VFXBlackboardCategory.expanded  > .mainContainer > #rowsContainer
+VFXBlackboardCategory > #dragIndicator
 {
-    display:flex;
+    position:absolute;
+    left:2;
+    right:2;
+    height:2;
+}
+
+VFXBlackboardCategory.expanded > .mainContainer > #rowsContainer
+{
+    display: flex;
 }
 
 VFXBlackboardCategory > .mainContainer > #sectionHeader
