--- a/com.unity.shadergraph/Editor/Resources/Styles/ColorMode.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/ColorMode.uss
@@ -1,87 +1,124 @@
 /* Node Category Colors */
-MaterialNodeView.Artistic #selection-border {
+MaterialNodeView.Artistic #custom-border {
     border-color: rgba(219, 119, 59, 0.61);
 }
 
-MaterialNodeView.Channel #selection-border {
+MaterialNodeView.Channel #custom-border {
     border-color: rgba(151, 209, 61, 0.61);
 }
 
-MaterialNodeView.Input #selection-border {
+MaterialNodeView.Input #custom-border {
     border-color: rgba(203, 48, 34, 0.61);
 }
 
-MaterialNodeView.Math #selection-border {
+MaterialNodeView.Math #custom-border {
     border-color: rgba(75, 146, 243, 0.61);
 }
 
-MaterialNodeView.Procedural #selection-border {
+MaterialNodeView.Procedural #custom-border {
     border-color: rgba(156, 79, 255, 0.6);
 }
 
-MaterialNodeView.Utility #selection-border {
+MaterialNodeView.Utility #custom-border {
     border-color: rgba(174, 174, 174, 0.6);
 }
 
-MaterialNodeView.UV #selection-border {
+MaterialNodeView.UV #custom-border {
     border-color: rgba(8, 215, 139, 0.6);
 }
 
 /* Precision Colors */
-MaterialNodeView.Float #selection-border {
+MaterialNodeView.Float #custom-border {
     border-color: rgba(75, 146, 243, 0.61);
 }
 
-MaterialNodeView.Half #selection-border {
+MaterialNodeView.Half #custom-border {
     border-color: rgba(203, 48, 34, 0.61);
 }
 
-MaterialNodeView.CategoryColor:hover > #selection-border{
-    border-color: rgba(68,192,255, 0.5);
-    border-left-width: 2px;
-    border-right-width: 2px;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
+#custom-border {
+    position : absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 1px;
+    border-radius: 8px;
+    border-width: 2px;
 }
 
-MaterialNodeView.CategoryColor:selected  > #selection-border
-{
-    border-color: #44C0FF;
-    border-left-width: 2px;
-    border-right-width: 2px;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
+MaterialNodeView:hover #custom-border,
+MaterialNodeView:checked #custom-border{
+    border-left-width: 0px;
+    border-right-width: 0px;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
 }
 
-MaterialNodeView.CategoryColor #selection-border{
-    border-radius: 10px;
-    border-left-width: 2px;
-    border-right-width: 2px;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
+MaterialNodeView:hover #selection-border,
+MaterialNodeView:checked #selection-border{
+    border-width: 2px;
 }
 
-MaterialNodeView.UserDefinedColor:hover > #selection-border{
-    border-color: rgba(68,192,255, 0.5);
-    border-left-width: 5px;
-    border-right-width: 5px;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-}
+/*#custom-border:selected{*/
+/*    border-left-width: 0px;*/
+/*    border-right-width: 0px;*/
+/*    border-top-width: 0px;*/
+/*    border-bottom-width: 0px;*/
+/*}*/
 
-MaterialNodeView.UserDefinedColor:selected  > #selection-border
-{
-    border-color: #44C0FF;
-    border-left-width: 5px;
-    border-right-width: 5px;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-}
+/*#custom-border {*/
+/*    border-color: rgba(68,192,255, 0.5);*/
+/*    border-left-width: 2px;*/
+/*    border-right-width: 2px;*/
+/*    border-top-width: 2px;*/
+/*    border-bottom-width: 2px;*/
+/*}*/
 
-MaterialNodeView.UserDefinedColor #selection-border{
-    border-radius: 10px;
-    border-left-width: 5px;
-    border-right-width: 5px;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-}
+/*MaterialNodeView.CategoryColor:hover > #custom-border{*/
+/*    border-color: rgba(68,192,255, 0.5);*/
+/*    border-left-width: 2px;*/
+/*    border-right-width: 2px;*/
+/*    border-top-width: 2px;*/
+/*    border-bottom-width: 2px;*/
+/*}*/
+
+/*MaterialNodeView.CategoryColor:selected > #custom-border{*/
+/*    border-color: #44C0FF;*/
+/*    border-left-width: 2px;*/
+/*    border-right-width: 2px;*/
+/*    border-top-width: 2px;*/
+/*    border-bottom-width: 2px;*/
+/*}*/
+
+/*MaterialNodeView.CategoryColor #custom-border{*/
+/*    border-radius: 10px;*/
+/*    border-left-width: 2px;*/
+/*    border-right-width: 2px;*/
+/*    border-top-width: 2px;*/
+/*    border-bottom-width: 2px;*/
+/*}*/
+
+/*MaterialNodeView.UserDefinedColor:hover > #custom-border{*/
+/*    border-color: rgba(68,192,255, 0.5);*/
+/*    border-left-width: 2px;*/
+/*    border-right-width: 2px;*/
+/*    border-top-width: 2px;*/
+/*    border-bottom-width: 2px;*/
+/*}*/
+
+/*MaterialNodeView.UserDefinedColor:selected > #custom-border {*/
+/*    border-color: #44C0FF;*/
+/*    border-left-width: 0px;*/
+/*    border-right-width: 0px;*/
+/*    border-top-width: 0px;*/
+/*    border-bottom-width: 0px;*/
+/*}*/
+
+/*MaterialNodeView.UserDefinedColor #custom-border{*/
+/*    border-radius: 10px;*/
+/*    border-left-width: 5px;*/
+/*    border-right-width: 5px;*/
+/*    border-top-width: 5px;*/
+/*    border-bottom-width: 5px;*/
+/*}*/
