--- a/com.unity.shadergraph/Editor/Resources/Styles/ColorMode.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/ColorMode.uss
@@ -1,42 +1,42 @@
 /* Node Category Colors */
-MaterialNodeView.Artistic #custom-border {
+MaterialNodeView.Artistic.CategoryColor #stylesheet-border {
     border-color: rgba(219, 119, 59, 0.61);
 }
 
-MaterialNodeView.Channel #custom-border {
+MaterialNodeView.Channel.CategoryColor #stylesheet-border {
     border-color: rgba(151, 209, 61, 0.61);
 }
 
-MaterialNodeView.Input #custom-border {
+MaterialNodeView.Input.CategoryColor #stylesheet-border {
     border-color: rgba(203, 48, 34, 0.61);
 }
 
-MaterialNodeView.Math #custom-border {
+MaterialNodeView.Math.CategoryColor #stylesheet-border {
     border-color: rgba(75, 146, 243, 0.61);
 }
 
-MaterialNodeView.Procedural #custom-border {
+MaterialNodeView.Procedural.CategoryColor #stylesheet-border {
     border-color: rgba(156, 79, 255, 0.6);
 }
 
-MaterialNodeView.Utility #custom-border {
+MaterialNodeView.Utility.CategoryColor #stylesheet-border {
     border-color: rgba(174, 174, 174, 0.6);
 }
 
-MaterialNodeView.UV #custom-border {
+MaterialNodeView.UV.CategoryColor #stylesheet-border {
     border-color: rgba(8, 215, 139, 0.6);
 }
 
 /* Precision Colors */
-MaterialNodeView.Float #custom-border {
+MaterialNodeView.Float #stylesheet-border {
     border-color: rgba(75, 146, 243, 0.61);
 }
 
-MaterialNodeView.Half #custom-border {
+MaterialNodeView.Half #stylesheet-border {
     border-color: rgba(203, 48, 34, 0.61);
 }
 
-#custom-border {
+#stylesheet-border {
     position : absolute;
     top: 0;
     bottom: 0;
@@ -45,29 +45,47 @@ MaterialNodeView.Half #custom-border {
     margin: 1px;
     border-radius: 8px;
     border-width: 2px;
+    border-color: rgba(125, 125, 125, 0.8039216);
 }
 
-MaterialNodeView:hover #custom-border,
-MaterialNodeView:checked #custom-border{
-    border-left-width: 0px;
-    border-right-width: 0px;
-    border-top-width: 0px;
-    border-bottom-width: 0px;
+#inline-border {
+    position : absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 1px;
+    border-radius: 8px;
 }
 
-MaterialNodeView:hover #selection-border,
-MaterialNodeView:checked #selection-border{
+.InlineColor #inline-border {
     border-width: 2px;
 }
 
-/*#custom-border:selected{*/
+.InlineColor #stylesheet-border {
+    border-width: 0;
+}
+
+MaterialNodeView:hover #stylesheet-border,
+MaterialNodeView:checked #stylesheet-border,
+MaterialNodeView:hover #inline-border,
+MaterialNodeView:checked #inline-border {
+    border-width: 0;
+}
+
+MaterialNodeView:hover #selection-border,
+MaterialNodeView:checked #selection-border {
+    border-width: 2px;
+}
+
+/*#stylesheet-border:selected{*/
 /*    border-left-width: 0px;*/
 /*    border-right-width: 0px;*/
 /*    border-top-width: 0px;*/
 /*    border-bottom-width: 0px;*/
 /*}*/
 
-/*#custom-border {*/
+/*#inline-border {*/
 /*    border-color: rgba(68,192,255, 0.5);*/
 /*    border-left-width: 2px;*/
 /*    border-right-width: 2px;*/
@@ -75,7 +93,7 @@ MaterialNodeView:checked #selection-border{
 /*    border-bottom-width: 2px;*/
 /*}*/
 
-/*MaterialNodeView.CategoryColor:hover > #custom-border{*/
+/*MaterialNodeView.CategoryColor:hover > #inline-border{*/
 /*    border-color: rgba(68,192,255, 0.5);*/
 /*    border-left-width: 2px;*/
 /*    border-right-width: 2px;*/
@@ -83,7 +101,7 @@ MaterialNodeView:checked #selection-border{
 /*    border-bottom-width: 2px;*/
 /*}*/
 
-/*MaterialNodeView.CategoryColor:selected > #custom-border{*/
+/*MaterialNodeView.CategoryColor:selected > #inline-border{*/
 /*    border-color: #44C0FF;*/
 /*    border-left-width: 2px;*/
 /*    border-right-width: 2px;*/
@@ -91,7 +109,7 @@ MaterialNodeView:checked #selection-border{
 /*    border-bottom-width: 2px;*/
 /*}*/
 
-/*MaterialNodeView.CategoryColor #custom-border{*/
+/*MaterialNodeView.CategoryColor #inline-border{*/
 /*    border-radius: 10px;*/
 /*    border-left-width: 2px;*/
 /*    border-right-width: 2px;*/
@@ -99,7 +117,7 @@ MaterialNodeView:checked #selection-border{
 /*    border-bottom-width: 2px;*/
 /*}*/
 
-/*MaterialNodeView.UserDefinedColor:hover > #custom-border{*/
+/*MaterialNodeView.UserDefinedColor:hover > #inline-border{*/
 /*    border-color: rgba(68,192,255, 0.5);*/
 /*    border-left-width: 2px;*/
 /*    border-right-width: 2px;*/
@@ -107,7 +125,7 @@ MaterialNodeView:checked #selection-border{
 /*    border-bottom-width: 2px;*/
 /*}*/
 
-/*MaterialNodeView.UserDefinedColor:selected > #custom-border {*/
+/*MaterialNodeView.UserDefinedColor:selected > #inline-border {*/
 /*    border-color: #44C0FF;*/
 /*    border-left-width: 0px;*/
 /*    border-right-width: 0px;*/
@@ -115,7 +133,7 @@ MaterialNodeView:checked #selection-border{
 /*    border-bottom-width: 0px;*/
 /*}*/
 
-/*MaterialNodeView.UserDefinedColor #custom-border{*/
+/*MaterialNodeView.UserDefinedColor #inline-border{*/
 /*    border-radius: 10px;*/
 /*    border-left-width: 5px;*/
 /*    border-right-width: 5px;*/
