--- a/com.unity.shadergraph/Editor/Resources/Styles/MaterialNodeView.uss
+++ b/com.unity.shadergraph/Editor/Resources/Styles/MaterialNodeView.uss
@@ -113,6 +113,10 @@ MaterialNodeView > #resize {
     cursor: resize-up-left;
 }
 
+MaterialNodeView.blockData > #portInputContainer {
+    top: 6px;
+}
+
 MaterialNodeView > #portInputContainer {
     position: absolute;
     width: 232px;
